# text-show-instances

./: .travis.yml  CHANGELOG.md  README.md  appveyor.yml  cabal.project  text-show-instances.cabal
.github/workflows/: haskell-ci.yml
src/Text/Show/Text/: Compiler.hs  Control.hs  Data.hs  Distribution.hs  Graphics.hs  Instances.hs  Language.hs  System.hs  Text.hs  Trace.hs  Utils.hs
src/Text/Show/Text/Compiler/: Hoopl.hs
src/Text/Show/Text/Control/Applicative/: Trans.hs
src/Text/Show/Text/Control/Monad/: Trans.hs
src/Text/Show/Text/Data/: Bifunctor.hs  Binary.hs  Containers.hs  Semigroup.hs  Tagged.hs  Time.hs  UnorderedContainers.hs  Vector.hs
src/Text/Show/Text/Data/Functor/: Trans.hs
src/Text/Show/Text/Data/List/: NonEmpty.hs
src/Text/Show/Text/Data/String/: UTF8.hs
src/Text/Show/Text/Distribution/: Compiler.hs  InstalledPackageInfo.hs  License.hs  ModuleName.hs  Package.hs  PackageDescription.hs  ParseUtils.hs  System.hs  TestSuite.hs  Text.hs  Utils.hs  Verbosity.hs  Version.hs
src/Text/Show/Text/Distribution/Simple/: BuildTarget.hs  CCompiler.hs  Compiler.hs  Configure.hs  Hpc.hs  InstallDirs.hs  LocalBuildInfo.hs  PackageIndex.hs  Setup.hs
src/Text/Show/Text/Language/Haskell/: Extension.hs  TH.hs
src/Text/Show/Text/System/: Directory.hs  Locale.hs  Posix.hs  Random.hs  Time.hs  Win32.hs
src/Text/Show/Text/System/Console/: Haskeline.hs  Terminfo.hs
src/Text/Show/Text/Text/: PrettyPrint.hs  XHtml.hs
src/Text/Show/Text/Trace/: Hpc.hs
src/TextShow/: Instances.hs  Utils.hs
src/TextShow/Compiler/: Hoopl.hs
src/TextShow/Control/Applicative/: Trans.hs
src/TextShow/Control/Monad/: Trans.hs
src/TextShow/Data/: Aeson.hs  Bifunctor.hs  Binary.hs  Containers.hs  Scientific.hs  Semigroup.hs  ShortText.hs  Tagged.hs  Time.hs  UUID.hs  UnorderedContainers.hs  Vector.hs  VectorNonEmpty.hs
src/TextShow/Data/Functor/: Trans.hs
src/TextShow/Data/List/: NonEmpty.hs
src/TextShow/Data/Vector/: NonEmpty.hs
src/TextShow/GHC/: PackageDb.hs
src/TextShow/GHC/ForeignSrcLang/: Type.hs
src/TextShow/GHC/LanguageExtensions/: Type.hs
src/TextShow/Language/Haskell/: TH.hs
src/TextShow/System/: Directory.hs  Locale.hs  Posix.hs  Process.hs  Random.hs  Time.hs  Win32.hs
src/TextShow/System/Console/: Haskeline.hs  Terminfo.hs
src/TextShow/Text/: PrettyPrint.hs  XHtml.hs
src/TextShow/Trace/: Hpc.hs
tests/: Properties.hs
tests/Instances/: Containers.hs  Miscellaneous.hs  Utils.hs
tests/Instances/Compiler/: Hoopl.hs
tests/Instances/Control/Applicative/: Trans.hs
tests/Instances/Control/Monad/: Trans.hs
tests/Instances/Data/: Bifunctor.hs  Binary.hs  Containers.hs  Semigroup.hs  ShortText.hs  Tagged.hs  Time.hs  Vector.hs  VectorNonEmpty.hs
tests/Instances/Data/Functor/: Trans.hs
tests/Instances/Data/List/: NonEmpty.hs
tests/Instances/Data/String/: UTF8.hs
tests/Instances/Data/Vector/: NonEmpty.hs
tests/Instances/Distribution/: Compiler.hs  InstalledPackageInfo.hs  License.hs  ModuleName.hs  Package.hs  PackageDescription.hs  ParseUtils.hs  System.hs  TestSuite.hs  Utils.hs  Verbosity.hs  Version.hs
tests/Instances/Distribution/Simple/: BuildTarget.hs  CCompiler.hs  Compiler.hs  Configure.hs  Hpc.hs  InstallDirs.hs  LocalBuildInfo.hs  PackageIndex.hs  Setup.hs
tests/Instances/Distribution/Simple/Program/: Db.hs  GHC.hs  Types.hs
tests/Instances/Distribution/Simple/Test/: Log.hs
tests/Instances/GHC/: PackageDb.hs
tests/Instances/GHC/ForeignSrcLang/: Type.hs
tests/Instances/GHC/LanguageExtensions/: Type.hs
tests/Instances/Language/Haskell/: Extension.hs  TH.hs
tests/Instances/System/: Directory.hs  Locale.hs  Posix.hs  Process.hs  Random.hs  Win32.hs
tests/Instances/System/Console/: Haskeline.hs  Terminfo.hs
tests/Instances/Text/: PrettyPrint.hs  XHtml.hs
tests/Instances/Trace/: Hpc.hs
tests/Properties/: Containers.hs  Time.hs
tests/Properties/Compiler/: Hoopl.hs
tests/Properties/Control/Applicative/: Trans.hs
tests/Properties/Control/Monad/: Trans.hs
tests/Properties/Data/: Binary.hs  Containers.hs  Semigroup.hs  Tagged.hs  Time.hs  UnorderedContainers.hs  Vector.hs
tests/Properties/Data/Functor/: Trans.hs
tests/Properties/Data/List/: NonEmpty.hs
tests/Properties/Data/String/: UTF8.hs
tests/Properties/Distribution/: Compiler.hs  InstalledPackageInfo.hs  License.hs  ModuleName.hs  Package.hs  PackageDescription.hs  ParseUtils.hs  System.hs  TestSuite.hs  Text.hs  Utils.hs  Verbosity.hs  Version.hs
tests/Properties/Distribution/Simple/: BuildTarget.hs  CCompiler.hs  Compiler.hs  Configure.hs  Hpc.hs  InstallDirs.hs  LocalBuildInfo.hs  PackageIndex.hs  Setup.hs
tests/Properties/Distribution/Simple/Program/: Db.hs  GHC.hs  Types.hs
tests/Properties/Distribution/Simple/Test/: Log.hs
tests/Properties/Language/Haskell/: Extension.hs  TH.hs
tests/Properties/System/: Directory.hs  Locale.hs  Posix.hs  Random.hs  Time.hs  Win32.hs
tests/Properties/System/Console/: Haskeline.hs  Terminfo.hs
tests/Properties/Text/: PrettyPrint.hs  XHtml.hs
tests/Properties/Trace/: Hpc.hs
tests/Spec/: Utils.hs
tests/Spec/Compiler/: HooplSpec.hs
tests/Spec/Control/Applicative/: TransSpec.hs
tests/Spec/Control/Monad/: TransSpec.hs
tests/Spec/Data/: AesonSpec.hs  BifunctorSpec.hs  BinarySpec.hs  ContainersSpec.hs  ScientificSpec.hs  SemigroupSpec.hs  ShortTextSpec.hs  TaggedSpec.hs  TimeSpec.hs  UUIDSpec.hs  UnorderedContainersSpec.hs  VectorNonEmptySpec.hs  VectorSpec.hs
tests/Spec/Data/Functor/: TransSpec.hs
tests/Spec/Data/List/: NonEmptySpec.hs
tests/Spec/Data/String/: UTF8Spec.hs
tests/Spec/Data/Vector/: NonEmptySpec.hs
tests/Spec/GHC/: PackageDbSpec.hs
tests/Spec/GHC/ForeignSrcLang/: TypeSpec.hs
tests/Spec/GHC/LanguageExtensions/: TypeSpec.hs
tests/Spec/Language/Haskell/: THSpec.hs
tests/Spec/System/: DirectorySpec.hs  LocaleSpec.hs  PosixSpec.hs  ProcessSpec.hs  RandomSpec.hs  TimeSpec.hs  Win32Spec.hs
tests/Spec/System/Console/: HaskelineSpec.hs  TerminfoSpec.hs
tests/Spec/Text/: PrettyPrintSpec.hs  XHtmlSpec.hs
tests/Spec/Trace/: HpcSpec.hs
(+4 files in other folders)
