name:                text-show-instances
version:             0.1
synopsis:            Additional instances for text-show
description:         @text-show-instances@ is a supplemental library to @text-show@
                     that provides additional @Show@ instances for data types in
                     common Haskell libraries not encompassed by @text-show@.
                     Currently, @text-show-instances@ covers these libraries:
                     .
                     * @<http://hackage.haskell.org/package/containers           containers>@           DONE
                     * @<http://hackage.haskell.org/package/directory            directory>@            DONE
                     * @<http://hackage.haskell.org/package/filepath             filepath>@             NOT DONE
                     * @<http://hackage.haskell.org/package/hpc                  hpc>@                  NOT DONE
                     * @<http://hackage.haskell.org/package/old-locale           old-locale>@           DONE
                     * @<http://hackage.haskell.org/package/old-time             old-time>@             DONE
                     * @<http://hackage.haskell.org/package/pretty               pretty>@               DONE
                     * @<http://hackage.haskell.org/package/random               random>@               DONE
                     * @<http://hackage.haskell.org/package/semigroups           semigroups>@           NOT DONE
                     * @<http://hackage.haskell.org/package/tagged               tagged>@               DONE
                     * @<http://hackage.haskell.org/package/template-haskell     template-haskell>@     NOT DONE
                     * @<http://hackage.haskell.org/package/time                 time>@                 DONE
                     * @<http://hackage.haskell.org/package/transformers         transformers>@
                       (and @<http://hackage.haskell.org/package/transformers-compat transformers-compat>@
                       if using an old version of @transformers@)                                       NOT DONE
                     * @<http://hackage.haskell.org/package/unix                 unix>@                 NOT DONE (if using a Unix-like OS)
                     * @<http://hackage.haskell.org/package/unordered-containers unordered-containers>@ DONE
                     * @<http://hackage.haskell.org/package/vector               vector>@               DONE
                     * @<http://hackage.haskell.org/package/Win32                Win32>@                NOT DONE (if using Windows)
                     * @<http://hackage.haskell.org/package/xhtml                xhtml>@                NOT DONE
                     .
                     One can use these instances by importing
                     "Text.Show.Text.Instances". Alternatively, there are monomorphic
                     versions of the @showb@ function available in the other submodules
                     of "Text.Show.Text".
homepage:            https://github.com/RyanGlScott/text-show-instances
bug-reports:         https://github.com/RyanGlScott/text-show-instances/issues
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          Ryan Scott <ryan.gl.scott@ku.edu>
stability:           Experimental
copyright:           (C) 2014 Ryan Scott
category:            Text
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md, include/inline.h
cabal-version:       >=1.8

source-repository head
  type:                git
  location:            git://github.com/RyanGlScott/text-show-instances.git

flag transformers-four
  description:         Use a recent version of @transformers@.
  default:             True

library
  exposed-modules:     Text.Show.Text.Instances
  
                       Text.Show.Text.Data.Containers
                       Text.Show.Text.Data.Tagged
                       Text.Show.Text.Data.Time
                       Text.Show.Text.Data.UnorderedContainers
                       Text.Show.Text.Data.Vector
                       Text.Show.Text.System.Directory
                       Text.Show.Text.System.Locale
                       Text.Show.Text.System.Random
                       Text.Show.Text.System.Time
                       Text.Show.Text.Text.PrettyPrint
  other-modules:       Text.Show.Text.Data
                       Text.Show.Text.System
                       Text.Show.Text.Text
                       Text.Show.Text.Utils
  build-depends:       base                 >= 4.2    && < 5
                     , containers           >= 0.1    && < 0.6
                     , directory            >= 1      && < 1.3
                     , filepath             >= 1.2    && < 1.4
                     , hpc                  >= 0.5    && < 0.7
                     , old-locale           >= 1      && < 1.1
                     , old-time             >= 1      && < 1.2
                     , pretty               >= 1      && < 1.2
                     , random               >= 1.0.1  && < 1.2
                     , semigroups           >= 0.8.4  && < 1
                     , tagged               >= 0.4.4  && < 1
                     , template-haskell     >= 2.4    && < 2.11
                     , text-show            >= 0.5    && < 0.6
                     , time                 >= 0.1    && < 1.6
                     , unordered-containers >= 0.2    && < 0.3
                     , vector               >= 0.9    && < 0.11
                     , xhtml                >= 3000.2 && < 3000.3
  hs-source-dirs:      src
  ghc-options:         -Wall
  include-dirs:        include
  includes:            inline.h
  install-includes:    inline.h
  
  if flag(transformers-four)
    build-depends:     transformers         >= 0.4    && < 0.5
  else
    build-depends:     transformers         >= 0.2    && < 0.4
                     , transformers-compat  >= 0.3    && < 1
  
  if os(windows)
    build-depends:     Win32                >= 2.1    && < 2.4
  else
    build-depends:     unix                 >= 2      && < 2.8

test-suite text-show-instances-properties
  type:                exitcode-stdio-1.0
  main-is:             Properties.hs
  other-modules:       Instances.Data.Containers
                       Instances.Data.Tagged
                       Instances.System.Directory
                       Instances.System.Locale
                       Instances.System.Random
                       Instances.Text.PrettyPrint
                       Properties.Data.Containers
                       Properties.Data.Tagged
                       Properties.Data.Time
                       Properties.Data.UnorderedContainers
                       Properties.System.Directory
                       Properties.System.Locale
                       Properties.System.Random
                       Properties.System.Time
                       Properties.Text.PrettyPrint
                       Properties.Utils
  build-depends:       base                 >= 4.2    && < 5
                     , containers           >= 0.1    && < 0.6
                     , directory            >= 1      && < 1.3
                     , filepath             >= 1.2    && < 1.4
                     , hpc                  >= 0.5    && < 0.7
                     , old-locale           >= 1      && < 1.1
                     , old-time             >= 1      && < 1.2
                     , pretty               >= 1      && < 1.2
                     , quickcheck-instances >= 0.1    && < 0.4
                     , random               >= 1.0.1  && < 1.2
                     , semigroups           >= 0.8.4  && < 1
                     , tagged               >= 0.4.4  && < 1
                     , tasty                >= 0.8    && < 0.11
                     , tasty-quickcheck     >= 0.8    && < 0.9
                     , template-haskell     >= 2.4    && < 2.11
                     , text-show            >= 0.5    && < 0.6
                     , text-show-instances  == 0.1
                     , time                 >= 0.1    && < 1.6
                     , unordered-containers >= 0.2    && < 0.3
                     , vector               >= 0.9    && < 0.11
                     , xhtml                >= 3000.2 && < 3000.3
  hs-source-dirs:      tests
  ghc-options:         -Wall
  
  if flag(transformers-four)
    build-depends:     transformers         >= 0.4    && < 0.5
  else
    build-depends:     transformers         >= 0.2    && < 0.4
                     , transformers-compat  >= 0.3    && < 1
  
  if os(windows)
    build-depends:     Win32                >= 2.1    && < 2.4
  else
    build-depends:     unix                 >= 2      && < 2.8
